--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <ul class="list-group" *ngIf="data">
+    <button class="button ui primary">Submit Me</button>
     <li class="list-group-item text-center">Username : <strong>{{data.username}}</strong></li>
     <li class="list-group-item text-center">Email : <strong>{{data.email}}</strong></li>
 </ul>
